# signalrgb-magichome-bridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  bridge.py  config.example.json  ddp_receiver.py  discovery.py  install-task.ps1  magichome_client.py  pyproject.toml  requirements.txt  start-bridge.bat  tray.py  wled_emulator.py
signalrgb_magichome_bridge/: __init__.py  __main__.py  bridge.py  config.py  install.py  magichome_client.py  protocol.py  tray.py  wled_emulator.py
tests/: test_ddp.py  test_protocol.py  test_wled.py
